crates/rymx/tests/snapshots/full__main@aoc__aoc_2023__day1.rym.snap
---
source: crates/rymx/tests/full.rs
expression: "String::from_utf8(out).unwrap()"
input_file: crates/rymx/tests/aoc/aoc_2023/day1.rym
---
Debug: Finished tokenizing
Const [const]
HSpace [ ]
Ident [input]
HSpace [ ]
Assign [=]
HSpace [ ]
Ident [read_to_string]
ParenOpen [(]
String [\"./day1.txt\"]
ParenClose [)]
Semi [;]
VSpace [\n\n]
Const [const]
HSpace [ ]
Ident [main]
HSpace [ ]
Assign [=]
HSpace [ ]
Fn [fn]
ParenOpen [(]
ParenClose [)]
HSpace [ ]
ThickArrow [=>]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [\t]
Let [let]
HSpace [ ]
Ident [sum]
HSpace [ ]
Assign [=]
HSpace [ ]
Ident [input]
VSpace [\n]
HSpace [\t\t]
Dot [.]
Ident [lines]
ParenOpen [(]
ParenClose [)]
VSpace [\n]
HSpace [\t\t]
Dot [.]
Ident [flat_map]
ParenOpen [(]
Fn [fn]
HSpace [ ]
ParenOpen [(]
Ident [line]
ParenClose [)]
HSpace [ ]
ThickArrow [=>]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [\t\t\t]
Let [let]
HSpace [ ]
Ident [left]
HSpace [ ]
Assign [=]
HSpace [ ]
Ident [line]
Dot [.]
Ident [iter]
ParenOpen [(]
ParenClose [)]
Dot [.]
Ident [find]
ParenOpen [(]
Ident [char]
Dot [.]
Ident [is_digit]
ParenClose [)]
Error [?]
Semi [;]
VSpace [\n]
HSpace [\t\t\t]
Let [let]
HSpace [ ]
Ident [right]
HSpace [ ]
Assign [=]
HSpace [ ]
Ident [line]
Dot [.]
Ident [iter]
ParenOpen [(]
ParenClose [)]
Dot [.]
Ident [findr]
ParenOpen [(]
Ident [char]
Dot [.]
Ident [is_digit]
ParenClose [)]
Error [?]
Semi [;]
VSpace [\n]
HSpace [\t\t\t]
Ident [u64]
Dot [.]
Ident [parse]
ParenOpen [(]
Ident [left]
HSpace [ ]
Plus [+]
Plus [+]
HSpace [ ]
Ident [right]
ParenClose [)]
VSpace [\n]
HSpace [\t\t]
BraceClose [}]
ParenClose [)]
VSpace [\n]
HSpace [\t\t]
Dot [.]
Ident [sum]
ParenOpen [(]
ParenClose [)]
Semi [;]
VSpace [\n]
HSpace [\t]
Ident [print]
ParenOpen [(]
Ident [sum]
ParenClose [)]
Semi [;]
VSpace [\n]
BraceClose [}]
Semi [;]
VSpace [\n]

Error: Invalid character `?`
   ╭─[/home/simon/dev/rym/crates/rymx/tests/aoc/aoc_2023/day1.rym:7:46]
   │
 7 │          let left = line.iter().find(char.is_digit)?;
   │                                                    ┬  
   │                                                    ╰── Invalid character `?`
───╯

Error: Invalid character `?`
   ╭─[/home/simon/dev/rym/crates/rymx/tests/aoc/aoc_2023/day1.rym:8:48]
   │
 8 │          let right = line.iter().findr(char.is_digit)?;
   │                                                      ┬  
   │                                                      ╰── Invalid character `?`
───╯

Error: Expected `break`, `not`, `return`, `{`, `[`, `(`, `..`, `-`, identifier or literal, found `+`
   ╭─[/home/simon/dev/rym/crates/rymx/tests/aoc/aoc_2023/day1.rym:9:20]
   │
 9 │          u64.parse(left ++ right)
   │                          ┬  
   │                          ╰── Expected `break`, `not`, `return`, `{`, `[`, `(`, `..`, `-`, identifier or literal
───╯

Debug: Finished parsing
None


